[fix]アクセスマップ右横のボーダーの削除

--- a/nri/index.html
+++ b/nri/index.html
@@ -96,7 +96,7 @@
 			<h2>企業情報</h2>
 			<div>
 				<h3>経営方針</h3>
-				<ul >
+				<ul>
 					<li><a href="#">社長メッセージ</a></li>
 					<li><a href="#">企業理念</a></li>
 					<li><a href="#">経営ビジョン</a></li>
@@ -153,10 +153,9 @@
 					<li><a href="#">IT基盤サービス</a></li>
 				</ul>
 			</div>
-			 <div class="pagenation">
-				<a href="#" class="hover-underline">&lt;前のページに戻る</a>
-			 </div>
-		</div>
+			<div class="pagenation">
+				<a href="#" class="hover-underline"><span class="pagenation-left">&lt;</span>前のページに戻る</a>
+			</div>
 		</div><!-- /.sub-menu -->
 		<div class="follow">
 			<span>Follow Us</span>
@@ -266,7 +265,7 @@
 				<li><a href="#">個人情報の取扱いについて</a></li>
 				<li><a href="#">情報セキュリティ対策についての宣言文</a></li>
 				<li><a href="#">お問い合わせ</a></li>
-				<li><a href="#">アクセスマップ</a></li>
+				<li class="privacy-list-last"><a href="#">アクセスマップ</a></li>
 			</ul>
 			<p><small>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</small></p>
 		</div><!-- /.privacy -->
