--- a/nri/index.html
+++ b/nri/index.html
@@ -65,8 +65,8 @@
 				<div class=" fade">
 					<a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
 				<div class="pagenation hover-underline">
-					<a href="#">&lt;<span>ビジネスモデルの特徴</span></a>
-					<a href="#"><span>人材が支えるNRI</span>&gt;</a>
+					<a href="#"><span>&lt;&nbsp;</span>ビジネスモデルの特徴</a>
+					<a href="#">人材が支えるNRI<span>&nbsp;&gt;</span></a>
 				</div>
 				<div class="sub-content">
 					<h3>NRIの強み</h3>
@@ -154,7 +154,7 @@
 				</ul>
 			</div>
 			<div class="pagenation">
-				<a href="#" class="hover-underline"><span class="pagenation-left">&lt;</span>前のページに戻る</a>
+				<a href="#" class="hover-underline"><span >&lt;&nbsp;</span>前のページに戻る</a>
 			</div>
 		</div><!-- /.sub-menu -->
 		<div class="follow">
