--- a/nri/index.html
+++ b/nri/index.html
@@ -26,7 +26,7 @@
 				<li><a href="#">採用情報</a></li>
 			</ul>
 		</nav><!-- /.main-nav -->
-		<nav class="sub-nav fade">
+		<nav class="sub-nav">
 			<ul>
 				<li><img src="./images/glass.svg" alt="search"></li>
 				<li><img src="./images/earth.svg" alt="language"></li>
@@ -62,16 +62,16 @@
 				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI
 					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
-				<div class=" fade">
-					<a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
+				<div class="button">
+					<a href="#">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
 				<div class="pagenation hover-underline">
 					<a href="#"><span>&lt;&nbsp;</span>ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI<span>&nbsp;&gt;</span></a>
 				</div>
 				<div class="sub-content">
 					<h3>NRIの強み</h3>
-					<div class="sub-content">
-						<ul class=" fade">
+					<div>
+						<ul>
 							<li><a href="#">NRIのあゆみと持続的な成長</a></li>
 							<li><a href="#">問題発見から問題解決まで</a></li>
 							<li><a href="#">問題発見から問題解決まで</a></li>
