[fix]underlineクラスを削除し、対象を明確に設定

--- a/nri/index.html
+++ b/nri/index.html
@@ -64,7 +64,7 @@
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
 				<div class="button">
 					<a href="#">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
-				<div class="pagenation hover-underline">
+				<div class="pagenation>
 					<a href="#"><span>&lt;&nbsp;</span>ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI<span>&nbsp;&gt;</span></a>
 				</div>
@@ -92,7 +92,7 @@
 			</div><!-- /.share-button -->
 		</div>
 
-		<div class="sub-menu hover-underline">
+		<div class="sub-menu  ">
 			<h2>企業情報</h2>
 			<div>
 				<h3>経営方針</h3>
@@ -154,7 +154,7 @@
 				</ul>
 			</div>
 			<div class="pagenation">
-				<a href="#" class="hover-underline"><span >&lt;&nbsp;</span>前のページに戻る</a>
+				<a href="#"><span >&lt;&nbsp;</span>前のページに戻る</a>
 			</div>
 		</div><!-- /.sub-menu -->
 		<div class="follow">
@@ -168,7 +168,7 @@
 		</div><!-- /.follow -->
 
 		<div class="sitemap">
-			<ul class="sitemap-list hover-underline">
+			<ul class="sitemap-list">
 				<li>
 					<ul>
 						<li><a href="#"><h4>ナレッジ・インサイト</h4></a></li>
@@ -257,7 +257,7 @@
 
 	</main>
 	<footer>
-		<div class="privacy hover-underline">
+		<div class="privacy">
 			<ul>
 				<li><a href="#">免責条項</a></li>
 				<li><a href="#">サイト利用規定</a></li>
