[fix]mainタグにmainクラスを付与。cssでタグに直接指定していた箇所を修正

--- a/nri/index.html
+++ b/nri/index.html
@@ -35,7 +35,7 @@
 		</nav><!-- /.suv-nav -->
 	</header><!-- /.page-header 	-->
 
-	<main>
+	<main class="main">
 		<ul class="breadcrumb">
 			<li><a href="#">NRIトップ></a></li>
 			<li><a href="#">企業情報></a></li>
@@ -64,7 +64,7 @@
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
 				<div class="button">
 					<a href="#">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
-				<div class="pagenation>
+				<div class="pagenation">
 					<a href="#"><span>&lt;&nbsp;</span>ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI<span>&nbsp;&gt;</span></a>
 				</div>
@@ -90,9 +90,9 @@
 					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
 				</ul>
 			</div><!-- /.share-button -->
-		</div>
+		</div><!-- /.main -->
 
-		<div class="sub-menu  ">
+		<div class="sub-menu">
 			<h2>企業情報</h2>
 			<div>
 				<h3>経営方針</h3>
