[fix]html,cssフォーマッター

--- a/nri/index.html
+++ b/nri/index.html
@@ -63,7 +63,8 @@
 					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
 				<div class="button">
-					<a href="#">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
+					<a href="#">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a>
+				</div>
 				<div class="pagenation">
 					<a href="#"><span>&lt;&nbsp;</span>ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI<span>&nbsp;&gt;</span></a>
@@ -113,7 +114,7 @@
 
 			<div>
 				<h3>企業案内</h3>
-				<ul >
+				<ul>
 					<li><a href="#">会社概要</a></li>
 					<li><a href="#">沿革</a></li>
 					<li><a href="#">組織図</a></li>
@@ -124,7 +125,7 @@
 
 			<div>
 				<h3>NRIの強み</h3>
-				<ul >
+				<ul>
 					<li><a href="#">NRIのあゆみと持続的な成長</a></li>
 					<li><a href="#">問題発見から問題解決まで</a></li>
 					<li><a href="#">強固な顧客基盤</a></li>
@@ -137,7 +138,7 @@
 
 			<div>
 				<h3>NRIグループ国内・海外拠点一覧</h3>
-				<ul >
+				<ul>
 					<li><a href="#">メインオフィス</a></li>
 					<li><a href="#">グループカンパニー</a></li>
 					<li><a href="#">その他の関連会社・団体</a></li>
@@ -146,7 +147,7 @@
 
 			<div>
 				<h3>事業案内</h3>
-				<ul >
+				<ul>
 					<li><a href="#">コンサルティング</a></li>
 					<li><a href="#">金融ITソリューション</a></li>
 					<li><a href="#">産業ITソリューション</a></li>
@@ -154,7 +155,7 @@
 				</ul>
 			</div>
 			<div class="pagenation">
-				<a href="#"><span >&lt;&nbsp;</span>前のページに戻る</a>
+				<a href="#"><span>&lt;&nbsp;</span>前のページに戻る</a>
 			</div>
 		</div><!-- /.sub-menu -->
 		<div class="follow">
@@ -171,7 +172,9 @@
 			<ul class="sitemap-list">
 				<li>
 					<ul>
-						<li><a href="#"><h4>ナレッジ・インサイト</h4></a></li>
+						<li><a href="#">
+								<h4>ナレッジ・インサイト</h4>
+							</a></li>
 						<li><a href="#">刊行物</a></li>
 						<li><a href="#">書籍</a></li>
 						<li><a href="#">コラム</a></li>
@@ -182,7 +185,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>ソリューション・サービス</h4></a></li>
+						<li><a href="#">
+								<h4>ソリューション・サービス</h4>
+							</a></li>
 						<li><a href="#">マネジメントコンサルティング</a></li>
 						<li><a href="#">システムコンサルティング</a></li>
 						<li><a href="#">金融ITソリューション</a></li>
@@ -195,7 +200,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>サステナビリティ</h4></a></li>
+						<li><a href="#">
+								<h4>サステナビリティ</h4>
+							</a></li>
 						<li><a href="#">サステナビリティマネジメント</a></li>
 						<li><a href="#">取り組み</a></li>
 						<li><a href="#">ライブラリ</a></li>
@@ -203,7 +210,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>ニュース</h4></a></li>
+						<li><a href="#">
+								<h4>ニュース</h4>
+							</a></li>
 						<li><a href="#">ニュースリリース</a></li>
 						<li><a href="#">お知らせ</a></li>
 						<li><a href="#">イベント</a></li>
@@ -211,7 +220,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>企業情報</h4></a></li>
+						<li><a href="#">
+								<h4>企業情報</h4>
+							</a></li>
 						<li><a href="#">社長メッセージ</a></li>
 						<li><a href="#">経営方針</a></li>
 						<li><a href="#">NRIの強み</a></li>
@@ -221,7 +232,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>株主・投資家情報（IR）</h4></a></li>
+						<li><a href="#">
+								<h4>株主・投資家情報（IR）</h4>
+							</a></li>
 						<li><a href="#">IRニュース</a></li>
 						<li><a href="#">IRイベント</a></li>
 						<li><a href="#">経営方針</a></li>
@@ -233,9 +246,15 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>採用情報</h4></a></li>
-						<li><a href="#"><h4>メディア関係者の皆様へ</h4></a></li>
-						<li><a href="#"><h4>ビジネスパートナーの皆様へ</h4></a></li>
+						<li><a href="#">
+								<h4>採用情報</h4>
+							</a></li>
+						<li><a href="#">
+								<h4>メディア関係者の皆様へ</h4>
+							</a></li>
+						<li><a href="#">
+								<h4>ビジネスパートナーの皆様へ</h4>
+							</a></li>
 					</ul>
 				</li>
 				<li>
@@ -251,7 +270,9 @@
 							</a></li>
 					</ul>
 				</li>
-				<li><a href="#"><h4>サイトマップ</h4></a></li>
+				<li><a href="#">
+						<h4>サイトマップ</h4>
+					</a></li>
 			</ul>
 		</div><!-- /.sitemap -->
 
@@ -271,5 +292,4 @@
 		</div><!-- /.privacy -->
 	</footer>
 </body>
-
 </html>
