[add]home画面マークアップ

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -1,1 +1,125 @@
 <!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTMLCSS.code</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <div>
+          <h1>
+            <a><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
+          </h1>
+        </div>
+        <nav>
+          <ul>
+            <li>HOME</li>
+            <li><a href="#">NEWS</a></li>
+            <li><a href="#">RECRUIT</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div>
+          <h2>We propose a life.</h2>
+        </div>
+        <div>
+          <h3>暮らしを提案する。</h3>
+          <p>
+            私たちは、家具を売るのではなく、お客様の理想とする
+            「暮らし」を提案します。 仕事で疲れた後に帰りたくなる、
+            今日も１日頑張ろうと思える、
+            そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2>NEWS</h2>
+        <div>
+          <div>
+            <a>
+              <img src="./assets/img/news01.png" alt="news01" />
+              <p>アームストロングのカウチ入荷</p>
+            </a>
+          </div>
+          <div>
+            <a>
+              <img src="./assets/img/news02.png" alt="news02" />
+              <p>アームストロングのチェア再入荷</p>
+            </a>
+          </div>
+          <div>
+            <a>
+              <img src="./assets/img/news03.png" alt="news03" />
+              <p>アームストロングのテーブル入荷</p>
+            </a>
+          </div>
+        </div>
+        <a href="#">view more</a>
+      </section>
+      <section>
+        <h2>公式カタログ</h2>
+        <p>
+          様々なスタイルをご提案いたします。オーダーメイドも可能です。
+          詳しくはカタログをご覧ください。
+        </p>
+        <a href="./assets/download/カタログ.pdf" download="catalog.pdf"><button>カタログをダウンロード</button></a>
+      </section>
+      <section>
+        <h2>CONTACT</h2>
+        <form action="" method="POST" name="contact">
+          <p>
+            <input type="text" name="name" id="name" placeholder="お名前" />
+          </p>
+          <p>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="メールアドレス"
+            />
+          </p>
+          <p>
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="お問い合わせ内容"
+            ></textarea>
+          </p>
+          <p><input type="submit" value="SEND" /></p>
+        </form>
+      </section>
+      <section>
+        <h2>RECTUIT</h2>
+        <p>現在Staffを募集しております。 詳しくは詳細ページをご覧ください。</p>
+        <a href="#">view more</a>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <div>
+          <a href="#"
+            ><img src="./assets/img/logo_footer.png" alt="HTMLCSS"
+          /></a>
+        </div>
+        <nav>
+          <ul>
+            <li>HOME</li>
+            <li><a href="#">NEWS</a></li>
+            <li><a href="#">RECRUIT</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p><small>&copy;HTMLCSS.code</small></p>
+    </footer>
+  </body>
+</html>
