[fix]news画面のアイキャッチ表示枠を追加

--- a/kaguya/news.html
+++ b/kaguya/news.html
@@ -26,6 +26,11 @@
     </header>
     <main>
       <section>
+        <div>
+          <h2>NEWS</h2>
+        </div>
+      </section>
+      <section>
         <h2>入荷情報</h2>
         <div>
           <div>
