[fix]各画面のリンクの修正

--- a/kaguya/contact.html
+++ b/kaguya/contact.html
@@ -11,14 +11,14 @@
       <div>
         <div>
           <h1>
-            <a><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
+            <a href="./index.html"><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
           </h1>
         </div>
         <nav>
           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">NEWS</a></li>
-            <li><a href="#">RECRUIT</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./news.html">NEWS</a></li>
+            <li><a href="./recruit.html">RECRUIT</a></li>
             <li>CONTACT</li>
           </ul>
         </nav>
@@ -61,15 +61,15 @@
     <footer>
       <div>
         <div>
-          <a href="#"
+          <a href="./index.html"
             ><img src="./assets/img/logo_footer.png" alt="HTMLCSS"
           /></a>
         </div>
         <nav>
           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">NEWS</a></li>
-            <li><a href="#">RECRUIT</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./news.html">NEWS</a></li>
+            <li><a href="./recruit.html">RECRUIT</a></li>
             <li>CONTACT</li>
           </ul>
         </nav>
