--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -11,15 +11,15 @@
       <div>
         <div>
           <h1>
-            <a><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
+            <a href="./index.html"><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
           </h1>
         </div>
         <nav>
           <ul>
             <li>HOME</li>
-            <li><a href="#">NEWS</a></li>
-            <li><a href="#">RECRUIT</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="./news.html">NEWS</a></li>
+            <li><a href="./recruit.html">RECRUIT</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -61,7 +61,7 @@
             </a>
           </div>
         </div>
-        <a href="#">view more</a>
+        <a href="./news.html">view more</a>
       </section>
       <section>
         <h2>公式カタログ</h2>
@@ -100,22 +100,22 @@
       <section>
         <h2>RECTUIT</h2>
         <p>現在Staffを募集しております。 詳しくは詳細ページをご覧ください。</p>
-        <a href="#">view more</a>
+        <a href="./recruit.html">view more</a>
       </section>
     </main>
     <footer>
       <div>
         <div>
-          <a href="#"
+          <a href="./index.html"
             ><img src="./assets/img/logo_footer.png" alt="HTMLCSS"
           /></a>
         </div>
         <nav>
           <ul>
             <li>HOME</li>
-            <li><a href="#">NEWS</a></li>
-            <li><a href="#">RECRUIT</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="./news.html">NEWS</a></li>
+            <li><a href="./recruit.html">RECRUIT</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </nav>
       </div>
