--- a/kaguya/recruit.html
+++ b/kaguya/recruit.html
@@ -11,15 +11,15 @@
       <div>
         <div>
           <h1>
-            <a><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
+            <a href="./index.html"><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
           </h1>
         </div>
         <nav>
           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">NEWS</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./news.html">NEWS</a></li>
             <li>RECRUIT</li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -95,16 +95,16 @@
     <footer>
       <div>
         <div>
-          <a href="#"
+          <a href="./index.html"
             ><img src="./assets/img/logo_footer.png" alt="HTMLCSS"
           /></a>
         </div>
         <nav>
           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">NEWS</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./news.html">NEWS</a></li>
             <li>RECRUIT</li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </nav>
       </div>
