--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -98,7 +98,7 @@
         </form>
       </section>
       <section>
-        <h2>RECTUIT</h2>
+        <h2>RECRUIT</h2>
         <p>現在Staffを募集しております。 詳しくは詳細ページをご覧ください。</p>
         <a href="./recruit.html">view more</a>
       </section>
