[fix]体裁・インデントの調整

--- a/kaguya/contact.html
+++ b/kaguya/contact.html
@@ -11,7 +11,9 @@
       <div>
         <div>
           <h1>
-            <a href="./index.html"><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
+            <a href="./index.html">
+              <img src="./assets/img/logo_header.png" alt="HTMLCSS" />
+            </a>
           </h1>
         </div>
         <nav>
@@ -32,7 +34,9 @@
       </section>
       <section>
         <h2>お問い合わせ</h2>
-        <p>オーダー家具や在庫状況のお問い合わせは下記フォームから承っております。</p>
+        <p>
+          オーダー家具や在庫状況のお問い合わせは下記フォームから承っております。
+        </p>
         <form action="" method="POST" name="contact">
           <p>
             <input type="text" name="name" id="name" placeholder="お名前" />
@@ -61,9 +65,9 @@
     <footer>
       <div>
         <div>
-          <a href="./index.html"
-            ><img src="./assets/img/logo_footer.png" alt="HTMLCSS"
-          /></a>
+          <a href="./index.html">
+            <img src="./assets/img/logo_footer.png" alt="HTMLCSS" />
+          </a>
         </div>
         <nav>
           <ul>
