--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -11,7 +11,9 @@
       <div>
         <div>
           <h1>
-            <a href="./index.html"><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
+            <a href="./index.html">
+              <img src="./assets/img/logo_header.png" alt="HTMLCSS" />
+            </a>
           </h1>
         </div>
         <nav>
@@ -69,7 +71,9 @@
           様々なスタイルをご提案いたします。オーダーメイドも可能です。
           詳しくはカタログをご覧ください。
         </p>
-        <a href="./assets/download/カタログ.pdf" download="catalog.pdf"><button>カタログをダウンロード</button></a>
+        <a href="./assets/download/カタログ.pdf" download="catalog.pdf">
+          <button>カタログをダウンロード</button>
+        </a>
       </section>
       <section>
         <h2>CONTACT</h2>
@@ -106,9 +110,9 @@
     <footer>
       <div>
         <div>
-          <a href="./index.html"
-            ><img src="./assets/img/logo_footer.png" alt="HTMLCSS"
-          /></a>
+          <a href="./index.html">
+            <img src="./assets/img/logo_footer.png" alt="HTMLCSS" />
+          </a>
         </div>
         <nav>
           <ul>
