--- a/kaguya/news.html
+++ b/kaguya/news.html
@@ -11,7 +11,9 @@
       <div>
         <div>
           <h1>
-            <a href="./index.html"><img src="./assets/img/logo_header.png" alt="HTMLCSS" /></a>
+            <a href="./index.html">
+              <img src="./assets/img/logo_header.png" alt="HTMLCSS" />
+            </a>
           </h1>
         </div>
         <nav>
@@ -57,9 +59,9 @@
     <footer>
       <div>
         <div>
-          <a href="./index.html"
-            ><img src="./assets/img/logo_footer.png" alt="HTMLCSS"
-          /></a>
+          <a href="./index.html">
+            <img src="./assets/img/logo_footer.png" alt="HTMLCSS" />
+          </a>
         </div>
         <nav>
           <ul>
