--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -40,18 +40,25 @@
       </div>
     </header>
     <main>
-      <section>
-        <div>
-          <h2>We propose a life.</h2>
+      <section class="concept">
+        <div class="concept__main-visual">
+          <div class="concept__main-visual--wrapper">
+            <h2 class="concept__main-visual--header">We propose a life.</h2>
+          </div>
         </div>
-        <div>
-          <h3>暮らしを提案する。</h3>
-          <p>
-            私たちは、家具を売るのではなく、お客様の理想とする
-            「暮らし」を提案します。 仕事で疲れた後に帰りたくなる、
-            今日も１日頑張ろうと思える、
-            そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
-          </p>
+        <div class="concept__detail">
+          <div class="concept__sub-visual">
+          </div>
+          <div class="concept__detail-wrapper">
+            <h3 class="concept__detail--header">暮らしを提案する。</h3>
+            <p class="concept__detail--text">
+              私たちは、家具を売るのではなく、お客様の理想とする<br>
+              「暮らし」を提案します。<br>
+              仕事で疲れた後に帰りたくなる、<br>
+              今日も１日頑張ろうと思える、<br>
+              そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
+            </p>
+          </div>
         </div>
       </section>
       <section>
