[add]各ページのアイキャッチのCSSコーディング

--- a/kaguya/contact.html
+++ b/kaguya/contact.html
@@ -40,9 +40,9 @@
       </div>
     </header>
     <main>
-      <section>
-        <div>
-          <h2>CONTACT</h2>
+      <section class="top">
+        <div class="top__chach--contact">
+          <h2 class="top__header--contact">CONTACT</h2>
         </div>
       </section>
       <section>
