--- a/kaguya/recruit.html
+++ b/kaguya/recruit.html
@@ -40,9 +40,9 @@
       </div>
     </header>
     <main>
-      <section>
-        <div>
-          <h2>RECRUIT</h2>
+      <section class="top">
+        <div class="top__chach--recruit">
+          <h2 class="top__header--recruit">RECRUIT</h2>
         </div>
       </section>
       <section>
