--- a/kaguya/news.html
+++ b/kaguya/news.html
@@ -40,9 +40,9 @@
       </div>
     </header>
     <main>
-      <section>
-        <div>
-          <h2>NEWS</h2>
+      <section class="top">
+        <div class="top__chach--news">
+          <h2 class="top__header--news">NEWS</h2>
         </div>
       </section>
       <section>
