--- a/kaguya/contact.html
+++ b/kaguya/contact.html
@@ -45,9 +45,9 @@
           <h2 class="top__header--contact">CONTACT</h2>
         </div>
       </section>
-      <section>
-        <h2>お問い合わせ</h2>
-        <p>
+      <section class="section">
+        <h2 class="section__header">お問い合わせ</h2>
+        <p class="section__text">
           オーダー家具や在庫状況のお問い合わせは下記フォームから承っております。
         </p>
         <form action="" method="POST" name="contact">
