--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -61,8 +61,8 @@
           </div>
         </div>
       </section>
-      <section>
-        <h2>NEWS</h2>
+      <section class="section">
+        <h2 class="section__header">NEWS</h2>
         <div>
           <div>
             <a>
@@ -83,20 +83,20 @@
             </a>
           </div>
         </div>
-        <a href="./news.html">view more</a>
+        <a class="section__link" href="./news.html">view more</a>
       </section>
-      <section>
-        <h2>公式カタログ</h2>
-        <p>
-          様々なスタイルをご提案いたします。オーダーメイドも可能です。
+      <section class="section">
+        <h2 class="section__header">公式カタログ</h2>
+        <p class="section__text">
+          様々なスタイルをご提案いたします。オーダーメイドも可能です。<br>
           詳しくはカタログをご覧ください。
         </p>
         <a href="./assets/download/カタログ.pdf" download="catalog.pdf">
           <button>カタログをダウンロード</button>
         </a>
       </section>
-      <section>
-        <h2>CONTACT</h2>
+      <section class="section">
+        <h2 class="section__header">CONTACT</h2>
         <form action="" method="POST" name="contact">
           <p>
             <input type="text" name="name" id="name" placeholder="お名前" />
@@ -121,10 +121,10 @@
           <p><input type="submit" value="SEND" /></p>
         </form>
       </section>
-      <section>
-        <h2>RECRUIT</h2>
-        <p>現在Staffを募集しております。 詳しくは詳細ページをご覧ください。</p>
-        <a href="./recruit.html">view more</a>
+      <section class="section">
+        <h2 class="section__header">RECRUIT</h2>
+        <p class="section__text">現在Staffを募集しております。 詳しくは詳細ページをご覧ください。</p>
+        <a class="section__link" href="./recruit.html">view more</a>
       </section>
     </main>
     <footer class="page-footer">
