--- a/kaguya/news.html
+++ b/kaguya/news.html
@@ -45,8 +45,8 @@
           <h2 class="top__header--news">NEWS</h2>
         </div>
       </section>
-      <section>
-        <h2>入荷情報</h2>
+      <section class="section">
+        <h2 class="section__header">入荷情報</h2>
         <div>
           <div>
             <a>
