--- a/kaguya/recruit.html
+++ b/kaguya/recruit.html
@@ -45,8 +45,8 @@
           <h2 class="top__header--recruit">RECRUIT</h2>
         </div>
       </section>
-      <section>
-        <h2>採用情報</h2>
+      <section class="section">
+        <h2 class="section__header">採用情報</h2>
         <table>
           <tbody>
             <tr>
