[fix]ボタンの実装をinputタグからbuttonタグに変更

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -118,7 +118,9 @@
               placeholder="お問い合わせ内容"
             ></textarea>
           </p>
-          <p><input type="submit" value="SEND" /></p>
+          <button type="submit" class="contact__form-btn">
+            SEND
+          </button>
         </form>
       </section>
       <section class="section">
