[add]Recruit要素・画面のCSSコーディング

--- a/kaguya/recruit.html
+++ b/kaguya/recruit.html
@@ -47,64 +47,62 @@
       </section>
       <section class="section">
         <h2 class="section__header">採用情報</h2>
-        <table>
-          <tbody>
-            <tr>
-              <td rowspan="3">販売員</td>
-              <td>
-                <p>仕事内容</p>
-                <ul>
-                  <li>海外から輸入している家具の販売</li>
-                  <li>商品管理</li>
-                  <li>オーダーメイド家具の発注</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>時給</p>
-                <p>1,200円〜</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>勤務時間</p>
-                <ul>
-                  <li>10:00 - 19:00（1時間休憩）</li>
-                  <li>週3〜5日</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td rowspan="3">家具職人</td>
-              <td>
-                <p>仕事内容</p>
-                <ul>
-                  <li>家具作成に必要な材料の発注</li>
-                  <li>商品管理</li>
-                  <li>オーダーメイド家具の相談</li>
-                  <li>オーダーメイド家具のディレクション</li>
-                  <li>オーダーメイド家具の製作</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>月給</p>
-                <p>35万円〜</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>勤務時間</p>
-                <ul>
-                  <li>10:00 - 19:00（1時間休憩）</li>
-                  <li>週3〜5日</li>
-                </ul>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="recruit">
+          <table class="recruit__table">
+            <tbody>
+              <tr class="recruit__table-row">
+                <td rowspan="3" class="recruit__table-header">販売員</td>
+                <td class="recruit__table-data">
+                  <p class="recruit__table-data--header">仕事内容</p>
+                  <ul class="recruit__table-list">
+                    <li class="recruit__table-data--text">海外から輸入している家具の販売</li>
+                    <li class="recruit__table-data--text">商品管理</li>
+                    <li class="recruit__table-data--text">オーダーメイド家具の発注</li>
+                  </ul>
+                </td>
+              </tr>
+              <tr class="recruit__table-row">
+                <td class="recruit__table-data">
+                  <p class="recruit__table-data--header">時給</p>
+                  <p class="recruit__table-data--text">1,200円〜</p>
+                </td>
+              </tr>
+              <tr class="recruit__table-row">
+                <td class="recruit__table-data">
+                  <p class="recruit__table-data--header">勤務時間</p>
+                  <p class="recruit__table-data--text">10:00 - 19:00（1時間休憩）</p>
+                  <p class="recruit__table-data--text">週3〜5日</p>
+                </td>
+              </tr>
+              <tr class="recruit__row">
+                <td rowspan="3" class="recruit__table-header">家具職人</td>
+                <td class="recruit__table-data">
+                  <p class="recruit__table-data--header">仕事内容</p>
+                  <ul class="recruit__table-list">
+                    <li class="recruit__table-data--text">家具作成に必要な材料の発注</li>
+                    <li class="recruit__table-data--text">商品管理</li>
+                    <li class="recruit__table-data--text">オーダーメイド家具の相談</li>
+                    <li class="recruit__table-data--text">オーダーメイド家具のディレクション</li>
+                    <li class="recruit__table-data--text">オーダーメイド家具の製作</li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td class="recruit__table-data">
+                  <p class="recruit__table-data--header">月給</p>
+                  <p class="recruit__table-data--text">35万円〜</p>
+                </td>
+              </tr>
+              <tr>
+                <td class="recruit__table-data">
+                  <p class="recruit__table-data--header">勤務時間</p>
+                    <p class="recruit__table-data--text">10:00 - 19:00（1時間休憩）</p>
+                    <p class="recruit__table-data--text">週3〜5日</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
