[add]News要素・画面のCSSコーディング

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -63,27 +63,29 @@
       </section>
       <section class="section">
         <h2 class="section__header">NEWS</h2>
-        <div>
-          <div>
-            <a>
-              <img src="./assets/img/news01.png" alt="news01" />
-              <p>アームストロングのカウチ入荷</p>
-            </a>
+        <div class="news">
+          <div class="news__wrapper">
+            <div class="news__image-wrapper">
+              <a>
+                <img src="./assets/img/news01.png" alt="news01" class="news__image"/>
+              </a>
+              <p class="news__message">アームストロングのカウチ入荷</p>
+            </div>
+            <div class="news__image-wrapper">
+              <a>
+                <img src="./assets/img/news02.png" alt="news02" class="news__image"/>
+              </a>
+              <p class="news__message">アームストロングのチェア再入荷</p>
+            </div>
+            <div class="news__image-wrapper">
+              <a>
+                <img src="./assets/img/news03.png" alt="news03" class="news__image"/>
+              </a>
+              <p class="news__message">アームストロングのテーブル入荷</p>
+            </div>
           </div>
-          <div>
-            <a>
-              <img src="./assets/img/news02.png" alt="news02" />
-              <p>アームストロングのチェア再入荷</p>
-            </a>
-          </div>
-          <div>
-            <a>
-              <img src="./assets/img/news03.png" alt="news03" />
-              <p>アームストロングのテーブル入荷</p>
-            </a>
-          </div>
+          <a class="section__link" href="./news.html">view more</a>
         </div>
-        <a class="section__link" href="./news.html">view more</a>
       </section>
       <section class="section">
         <h2 class="section__header">公式カタログ</h2>
