[add]カタログ要素のCSSコーディング

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -94,7 +94,7 @@
           詳しくはカタログをご覧ください。
         </p>
         <a href="./assets/download/カタログ.pdf" download="catalog.pdf">
-          <button>カタログをダウンロード</button>
+          <button class="section__btn">カタログをダウンロード</button>
         </a>
       </section>
       <section class="section">
